# steplock-ai-skill-executor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/engeneering/: PUBLISHING.md  architecture.md  git-branch.md  git-commit.md  github-pr.md  vscode-mcp-setup.md
docs/product/: brd.md  quickstart.md
src/steplock/application/skill/: __init__.py  commands.py  ports.py  services.py
src/steplock/config/: settings.py
src/steplock/domains/skill/: __init__.py  events.py  exceptions.py  models.py
src/steplock/entry_points/: main.py
src/steplock/entry_points/mcp/: __init__.py  server.py
src/steplock/infrastructure/skill/: __init__.py  loaders.py  registry.py  repositories.py  runners.py
tests/e2e/: test_skill_execution.py
