[build-system]
requires = ["uv_build>=0.11.14"]
build-backend = "uv_build"

[project]
name = "steplock"
version = "0.2.0"
description = "An MCP server gatekeeper runtime that enforces step-by-step AI skill execution with output verification, ensuring stable and reliable agent workflows regardless of LLM compliance."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Sergei Konovalov", email = "l0kifs91@gmail.com" },
]
keywords = ["mcp", "agent", "skill", "llm", "verification", "step-sequencer", "ai-workflow", "gatekeeper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp==3.3.1",
    "pydantic-settings==2.14.1",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
]

[project.urls]
Homepage = "https://github.com/l0kifs/steplock-ai-skill-executor"
Documentation = "https://github.com/l0kifs/steplock-ai-skill-executor#readme"
Repository = "https://github.com/l0kifs/steplock-ai-skill-executor"
Issues = "https://github.com/l0kifs/steplock-ai-skill-executor/issues"

[tool.uv]
package = true

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    "tiktoken==0.13.0",
]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.8.0",
    "pytest-cov==7.1.0",
]
lint = [
    "ruff==0.15.13",
    "ty==0.0.37",
    "vulture==2.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".venv", "__pycache__", ".git"]
asyncio_mode = "auto"
addopts = [
  "--tb=short",
  "-ra",
  "--import-mode=importlib",
]
markers = [
  "e2e: end-to-end tests requiring a running Docker Compose stack",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

[tool.vulture]
min_confidence = 80
exclude = [".venv/"]

[tool.ty]

[tool.ty.src]
exclude = [".venv/**"]
